--- a/Scriptura.resx
+++ b/Scriptura.resx
@@ -2839,7 +2839,7 @@
   <data name="buildToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAGhtJREFUeF7t3d16Y8lxplF1t2xpLGs8sg/G93+jMynzpdxVrh9yE+DO2HutIz3d
+        vAAADrwBlbxySQAAGhtJREFUeF7t3d16Y8lxplF1t2xpLGs8sg/G93+jMynzpdxVrh9yE+DO2HutIz3d
         VcQXAWREAqhq/QEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIDl/z1ZDwMAfLZ28XaKBwB8VLt1
         rMoAAH6kvXlZlQkA99ZevK3aAADX1+7jK7UHAK6jHccb1TYAmKddxgfUSgDYX7uLB6u9ALCX9hRPVrsB
@@ -2956,7 +2956,7 @@
   <data name="synthesizeToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAH4VJREFUeF7t3b2uJdeZHmCSY5KasSax4MSBrYCAZAYOyEiZUkFxZ4IEg8qoUDAB
+        vAAADrwBlbxySQAAH4VJREFUeF7t3b2uJdeZHmCSY5KasSax4MSBrYCAZAYOyEiZUkFxZ4IEg8qoUDAB
         A8x9A7yHviXP+BImmelkxD+5q3sX1Tz97p9atarWWlXPA7wKuk/Xrl27zvd+6r15+h3gRJ6/+P5l/nol
         31++CgA4hOcvvnlS9rfyzeVPAQDDev7i2ycF/0i+vfxpAGA0n3766T+Ecn8ov/rVr/7+chgAYCih2BcF
         ABjM8xd/eavQl+cvl6MBAEO4/Yn/R+O/DACAoeRCXx4AYCCpzEsCAAwklXlJAICBpDIvCQAwkFTmJQEA
@@ -3097,7 +3097,7 @@
   <data name="decryptToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAGJlJREFUeF7t3d2SXddxpVHwT1Q4TNnujv55/6t+v34A94Hrs4J0b1IAWLVzrb3G
+        vAAADrwBlbxySQAAGJlJREFUeF7t3d2SXddxpVHwT1Q4TNnujv55/6t+v34A94Hrs4J0b1IAWLVzrb3G
         iFh3MjFPnZyZlAkRnwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAA4OXf31l/WQBgQvd4WcUEAL5F9/Qx+lgAwK91J4/RxwaAs3QHST8WAHiebh3/
         QD8uANhXN41v1I8RANbX7eKd9eMFgHV0o7hJP3YAmNE9YkhfAwDco/vDIvpaAOBjdG9YVF8TALyP7gub
@@ -3208,7 +3208,7 @@
   <data name="documentationToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAAHWJJREFUeF7t3FFyXdexZVFJYVd9vir3vwHunxvguhIn61nnHVLAJcAEco8RkRH+
+        vQAADr0BR/uQrQAAHWJJREFUeF7t3FFyXdexZVFJYVd9vir3vwHunxvguhIn61nnHVLAJcAEco8RkRH+
         XETuXDwBKvwLs/4NjOscAd5PfQN8QJ0pwNupX4APrpMFeF59Anwyj/P97csVA7xCHQJ8Yo9T/l9fLhrg
         L9QbwBKPs/YRAHxffQEs8zjv//3lygH+Qx0BLPY4db8JAP5b3QAc4HHyfhMA/PK3OgE4yOP2fQTAwf5R
         FwAHenSAfw6A03T/wOEedeA3AXCK7h7gD49a8BEA23XvAH/yqAf/HABbdecAtx414TcBsND/6cYBvunR
@@ -3339,7 +3339,7 @@
   <data name="aboutScripturaToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAAH/9JREFUeF7t3dt2G0mSbVFQ18zKzDqjT///e/9ff0B1sGKpqBQNJADGZZv7mmPY
+        vQAADr0BR/uQrQAAH/9JREFUeF7t3dt2G0mSbVFQ18zKzDqjT///e/9ff0B1sGKpqBQNJADGZZv7mmPY
         C0UC2zzC3UIXUhdJuf7VHG1IkqQfmJHTYzkkSRoHM04PYhklScrEvNJBWHZJko7DDFIYLo8kSR/HbFFT
         XEZJkt7G3NCguMySpNkxFzQpbgNJ0ug496USt4kkqTvOdekh3EaSpA44u6VNcXtJkpJwRkuH4LaTJJ2B
         s1g6FbejJGlPnLlSJG5TSdIWOFulVrh9JUn34AyVhsBtLUm6hvNSGhK3uSTpGWejNBVuf0maD+egNDW2
@@ -3482,7 +3482,7 @@
   <data name="gitHubToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAAKu5JREFUeF7t3euS3EaSBeHhTbfRymxt5v1fdRdUuUSK3dVdF2SeiEz/fpLNgkcA
+        vQAADr0BR/uQrQAAKu5JREFUeF7t3euS3EaSBeHhTbfRymxt5v1fdRdUuUSK3dVdF2SeiEz/fpLNgkcA
         CfbOUuS/JNX1f80xhiRJ+h6/T26LNUiStBZ+n9ODWKMkSXXxe5YGY92SJM3F70MqhtsjSdI5+P1FzXD7
         JEm6Db9/aDHcXkmS/M1+dzwGkqQd8O6X/oHHQ5K0Ct7v0l14fCRJnfAOl07BYyVJqoh3tTQUj5skKYl3
         shTBYyhJmoF3r1QKj6ck6Uy8Y6UWeGwlSY/gXSq1xuMsSXoP701pKTzekqTv8Y6UtsBjL0n74n0obYlj
@@ -3668,6 +3668,12 @@
         tA5+j9se65AkSX/h98i2GENSOf/61/8Djq4jzfzTRQIAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="saveFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>125, 17</value>
+  </metadata>
+  <metadata name="openFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>254, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIACnFgAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
